--- a/style.css
+++ b/style.css
@@ -14,5 +14,5 @@ p{
 }
 
 body {
-    background: linear-gradient(to bottom, #ffffcc 32%, #ffffff 100%)
+    background: linear-gradient(to bottom, #ffffcc 0%, #66ffff 100%)
 }
